--- a/room.html
+++ b/room.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Home Action</title>
+    <title>Homeaction|Room</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/flat-ui.min.css" rel="stylesheet">
@@ -112,48 +112,45 @@
                 <!-- side-nav-container end -->
                 <div class="col-md-9 contents-continer animated bounceInRight">
                     <div class="panel panel-success">
-                        <div class="panel-heading">Kitchen</div>
-                        <div class="panel-body">
-                            <div class="col-md-5 pic-container">
-                                <img src="img/kitchen-pic.png" alt="Kitchen Picture" class="content-pic">
-                                <a href="" class="btn btn-default pic-btn">Change Icon</a>
+                        <div class="panel-heading">Add Section & Room</div>
+                        <div class="panel-body room-panel-body">
+                            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit inventore fuga sequi voluptatibus nulla corrupti amet ea necessitatibus, magnam doloremque, officiis nihil facere, quam quis cupiditate. Sed ex, velit
+                                earum.
+                            </p>
+                            <div class="section-container clearfix">
+                                <div class="col-md-3 section-pic-container">
+                                    <img src="http://placehold.it/147x138">
+                                </div>
+                                <div class="col-md-9 section-form-container">
+                                    <form action="" method="POST" class="form-horizontal" role="form">
+                                        <div class="form-group">
+                                            <legend class="textgreen">Section title</legend>
+                                            <input class="col-md-9" type="text" name="" value="">
+                                            <button type="submit" class="btn btn-default">+ Add Section</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
-                            <!-- pic-container end -->
-                            <div class="col-md-7 kitchen-form">
-                                <h4 class="">Kitchen</h4>
-                                <form class="form-horizontal" action="" method="post">
-                                    <div class="form-group">
-                                        <label for="kitchen" class="col-sm-2 control-label">Kitchen</label>
-                                        <div class="col-sm-10">
-                                            <input type="text" class="form-control" id="kitchen" placeholder="">
+                            <!-- section-container end -->
+                            <div class="section-container clearfix">
+                                <div class="col-md-3 section-pic-container">
+                                    <img src="http://placehold.it/147x138">
+                                </div>
+                                <div class="col-md-9 section-form-container">
+                                    <form action="" method="POST" class="form-horizontal" role="form">
+                                        <div class="form-group">
+                                            <legend class="textgreen">Section title</legend>
+                                            <input class="col-md-9" type="text" name="" value="">
+                                            <button type="submit" class="btn btn-default">+ Add Section</button>
                                         </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="kitchen" class="col-sm-2 control-label">Section</label>
-                                        <div class="col-sm-10">
-                                            <select class="form-control">
-                                                <option>Value 1</option>
-                                                <option>Value 2</option>
-                                                <option>Value 3</option>
-                                                <option>Value 4</option>
-                                                <option>Value 5</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="kitchen" class="col-sm-2 control-label">Section1:</label>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="kitchen" class="col-sm-2 control-label">Section2:</label>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class=" pull-right" style="margin-right: 16px;">
-                                            <button type="submit" class="btn btn-default">Button</button>
-                                        </div>
-                                    </div>
-                                </form>
+                                    </form>
+                                </div>
                             </div>
-                            <!-- kitchen from end -->
+                            <!-- section-container end -->
+
+
+
+
                         </div>
                         <!-- panel body end -->
                     </div>
