--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="img/favicon.ico">
     <link href="css/responsive.css" rel="stylesheet">
     <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
+    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.js"></script>
@@ -24,9 +25,12 @@
     <div class="container-fluid">
         <div class="row topbar-full-container darkgrey animated bounceInDown">
             <div class="container topbar-container">
-                <div class="col-md-8 col-md-offset-2 topbar-links-container">
+                <div class="col-md-7 col-md-offset-2 topbar-links-container">
                     <a href="tel:+659648036" class="col-md-3 col-xs-12 topbar-links"><i class="fa fa-phone"></i> +659648036</a>
-                    <a href="" class="col-md-6 col-xs-12 topbar-links"><i class="fa fa-envelope"></i> admin@l3homeaction.com</a>
+                    <a href="" class="col-md-5 col-xs-12 topbar-links"><i class="fa fa-envelope"></i> admin@l3homeaction.com</a>
+                </div>
+                <div class="col-md-3 topbar-links-container">
+                    <a href="tel:+659648036" class="col-md-6 col-xs-12 topbar-links"><i class="fa fa-phone"></i> John Smith</a>
                 </div>
             </div>
         </div>
@@ -65,7 +69,8 @@
             <div class="container main-contents-inner-container">
                 <div class="col-md-3 side-nav-container animated bounceInLeft">
                     <div class="side-nav-group">
-                        <a href="" class="side-nav-header room "></a>
+
+                        <a href="" class="side-nav-header family "><span class="family-icon"> <img src="img/house-icon.png" alt="Family Picture" class=""></span> Rooms</a>
                         <a href="" class="side-nav-header sidebar-links room">
                         House
                     </a>
@@ -90,7 +95,7 @@
                     </div>
                     <!-- side-nav-group end -->
                     <div class="side-nav-group">
-                        <a href="" class="side-nav-header family "></a>
+                        <a href="" class="side-nav-header family "><span class="family-icon"> <img src="img/family-icon.png" alt="Family Picture" class=""></span> Family</a>
                         <a href="" class="side-nav-header sidebar-links room">
                         All
                     </a>
@@ -142,13 +147,19 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="kitchen" class="col-sm-2 control-label">Section1:</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" id="kitchen" placeholder="">
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="kitchen" class="col-sm-2 control-label">Section2:</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" id="kitchen" placeholder="">
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <div class=" pull-right" style="margin-right: 16px;">
-                                            <button type="submit" class="btn btn-default">Button</button>
+                                            <button type="submit" class="btn btn-default">Save</button>
                                         </div>
                                     </div>
                                 </form>
@@ -171,7 +182,7 @@
         <div class="row footer-wrapper">
             <footer class="footer">
                 <div class="container" style="margin-top: 10px;">
-                    <div class="col-md-2 col-xs-12 footer-inner footer-link-container" style="margin:20px 0px;padding-bottom: 20px;">
+                    <div class="col-md-2 col-xs-12 footer-inner footer-link-container" style="margin:10px 0px;padding-bottom: 20px;">
                         <h4>Links</h4>
                         <ul>
                             <li><a href="">My Account</a></li>
@@ -184,8 +195,8 @@
                     <div class="col-md-3 col-xs-12 footer-inner footer-link-container" style="margin:10px 0px;padding-bottom: 10px;">
                         <h4>Stay Tune</h4>
                         <p>Connect with us and stay in the loop with the latest news.</p>
-                        <a href="#"><i class="fa fa-facebook-square fa-4x textgreen animated bounceIn"></i>&nbsp&nbsp
-                        <a href="#"><i class="fa fa-twitter-square fa-4x textgreen animated bounceIn"></i> <!-- <img src="img/images/LoudMouth-img_24.jpg" alt=""> --></a>
+                        <a href="#"><i class="fa fa-facebook-square fa-4x darkgreen-color animated bounceIn"></i>&nbsp&nbsp
+                        <a href="#"><i class="fa fa-twitter-square fa-4x darkgreen-color animated bounceIn"></i> <!-- <img src="img/images/LoudMouth-img_24.jpg" alt=""> --></a>
                         <!-- <a href="#"> <img src="img/images/LoudMouth-img_25.jpg" alt=""></a> -->
                     </div>
                     <div class="col-md-3 col-xs-12 footer-inner footer-link-container" style="margin:10px 0px;padding-bottom: 10px;">
@@ -210,7 +221,7 @@
         <div class="row second-footer" style="background: #000;">
             <div class="container second-footer-container">
                 <a href="" style="font-size: 0.7em;">© 2017 L3 Homeation. All rights reserved.</a>
-                <a href="" class="pull-right" style="font-size: 0.7em; margin-top: 5px;">Design & Development By : Innov8te.com.sg</a>
+                <a href="" class="pull-right" style="font-size: 0.6em; margin-top: 5px;color:#484848!important;">Design & Development By : Innov8te.com.sg</a>
             </div>
         </div>
     </div>
