--- a/room.html
+++ b/room.html
@@ -24,9 +24,12 @@
     <div class="container-fluid">
         <div class="row topbar-full-container darkgrey animated bounceInDown">
             <div class="container topbar-container">
-                <div class="col-md-8 col-md-offset-2 topbar-links-container">
+                <div class="col-md-7 col-md-offset-2 topbar-links-container">
                     <a href="tel:+659648036" class="col-md-3 col-xs-12 topbar-links"><i class="fa fa-phone"></i> +659648036</a>
-                    <a href="" class="col-md-6 col-xs-12 topbar-links"><i class="fa fa-envelope"></i> admin@l3homeaction.com</a>
+                    <a href="" class="col-md-5 col-xs-12 topbar-links"><i class="fa fa-envelope"></i> admin@l3homeaction.com</a>
+                </div>
+                <div class="col-md-3 topbar-links-container">
+                    <a href="tel:+659648036" class="col-md-6 col-xs-12 topbar-links"><i class="fa fa-phone"></i> John Smith</a>
                 </div>
             </div>
         </div>
@@ -65,7 +68,8 @@
             <div class="container main-contents-inner-container">
                 <div class="col-md-3 side-nav-container animated bounceInLeft">
                     <div class="side-nav-group">
-                        <a href="" class="side-nav-header room "></a>
+
+                        <a href="" class="side-nav-header family "><span class="family-icon"> <img src="img/house-icon.png" alt="Family Picture" class=""></span> Rooms</a>
                         <a href="" class="side-nav-header sidebar-links room">
                         House
                     </a>
@@ -90,7 +94,7 @@
                     </div>
                     <!-- side-nav-group end -->
                     <div class="side-nav-group">
-                        <a href="" class="side-nav-header family "></a>
+                        <a href="" class="side-nav-header family "><span class="family-icon"> <img src="img/family-icon.png" alt="Family Picture" class=""></span> Family</a>
                         <a href="" class="side-nav-header sidebar-links room">
                         All
                     </a>
